# Tareas

./: README.md
Hoja de Trabajo 3/: CMakeLists.txt  Implementación_Pila.cpp
Tarea IX_ Arboles BST/: CMakeLists.txt  Árboles_BST.cpp
Tarea Semana VII - Lista Estudiantes/: CMakeLists.txt  Menu_Lista.cpp
Tarea VI/: CMakeLists.txt  Menu_pilas.cpp  Tarea VI - Pilas, Josue Flores Carnet 9941 24 7857.docx
Tarea VII - Estructuras dinámicas/: CMakeLists.txt  Estructuras_dinamicas.cpp  README.md
Tarea VIII - Lista doblemente enlazada/: CMakeLists.txt  Programa_corregido.cpp  Programa_mejorado.cpp  Programa_mejorado.h
Tarea X - AVL/: CMakeLists.txt  README.md  main.cpp
Tarea XI - Tablas Hash/: README.md
Tarea XI - Tablas Hash/cpp-hash/: main.cpp
Tarea XI - Tablas Hash/java-hashmap/: Estudiante.java  Main.java  estudiantes.csv
Tarea XII - Mejora de código/: README.md
Tarea XII - Mejora de código/src/: Cliente.java  GeneradorClientes.java  Main.java  ProcesadorOptimizado.java
Tareas Semana IV/: CMakeLists.txt  Lista_simple.cpp  Lista_simple.h  Tarea IV - Lista Simple, Josue Flores Carnet 9941 24 7857.docx
