cmake_minimum_required(VERSION 4.1)
project(Tarea_VIII___Lista_doblemente_enlazada)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Tarea_VIII___Lista_doblemente_enlazada
        Programa_corregido.cpp
        Programa_corregido.exe
        Programa_mejorado.cpp
        Programa_mejorado.h)
